dataset1235/2025-2/610742602/users/3642541582/executions/2563853024_2403290319.log
== SUBMISSION (2025-09-02 20:18:48)
-- CODE: 
preco = float(input("digite o valor unitário: "))
quantidade = int(input("digite a quantidade: "))

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o valor unitário: digite a quantidade: 2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o valor unitário: digite a quantidade: 450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o valor unitário: digite a quantidade: 662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o valor unitário: digite a quantidade: 77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o valor unitário: digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o valor unitário: digite a quantidade: 350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:18:47)
-- CODE: 
preco = float(input("digite o valor unitário: "))
quantidade = int(input("digite a quantidade: "))

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o valor unitário: digite a quantidade: 2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o valor unitário: digite a quantidade: 450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o valor unitário: digite a quantidade: 662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o valor unitário: digite a quantidade: 77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o valor unitário: digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o valor unitário: digite a quantidade: 350.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:18:32)
-- CODE: 
preco = float(input("digite o valor unitário: ")
quantidade = int(input("digite a quantidade: ")

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:18:33)
-- CODE: 
preco = float(input("digite o valor unitário: ")
quantidade = int(input("digite a quantidade: ")

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input("digite o valor unitário: ")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
